Removed warning